# aegis-v1

./: .gitignore  CFO_EXECUTIVE_SUMMARY.md  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  hardhat.config.js  package-lock.json  package.json
GUIDES/: OPEN_SOURCE.md
contracts/: AegisID.sol  AegisRules.sol  AegisWallet.sol
contracts/interfaces/: IAegisID.sol  IAegisRules.sol
contracts/mocks/: MockUSDC.sol
migrations/: 20260111000000_init_schema.sql  20260111010000_create_users.sql
scripts/: create_admin.ps1  deploy.js  deploy_part1.js  seed_data.js  stress_test.js  test_login.js
src/: lib.rs  main.rs  state.rs
src/agent/: handlers.rs  mod.rs  models.rs
src/auth/: handlers.rs  mod.rs  models.rs  utils.rs
src/chain/: mod.rs
src/compliance/: handlers.rs  iso20022.rs  mod.rs  models.rs
src/finance/: handlers.rs  mod.rs  models.rs
src/governance/: handlers.rs  mod.rs  models.rs
test/: AegisID.js  AegisWallet.test.js  Pilot.test.js
